added reference library

--- a/bachelor-main.tex
+++ b/bachelor-main.tex
@@ -69,6 +69,8 @@ University of Copenhagen
 
 \section{Introduction}
 
+Cuda by example\cite{cudabyexample}
+
 \newpage
 \tableofcontents
 \newpage
@@ -92,11 +94,10 @@ University of Copenhagen
 \newpage
 
 \bibliographystyle{plain}
-\bibliography{/Tex/Library}
+\bibliography{library}
 \newpage
 
 \input{appendix.tex}
-
 
 %%%---BibTeX ---%%%
 %(Compile: 1 x LaTeX 1 x Bibtex 2 x LaTex)%
