changed theory structure, added to cuda chapter, changed font

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
 %%%--- Preamble by Jacob Salomonsen ---%%%
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,11pt]{article}
 
 %%%--- IMPORT AF PAKKER ---%%%
 \usepackage[hang,small,bf]{caption}		% Nice captions at figures
@@ -25,7 +25,7 @@
 %%%--- SKRIFTTYPE ---%%%
 %\usepackage{stmaryrd}
 %\usepackage{mathpazo}
-\usepackage{charter}
+%\usepackage{charter}
 %\usepackage{helvet}
 %\usepackage{avant}
 %\usepackage{mathptmx}
